src/CertsLearning/Envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: /
                  cluster: simpleapp
          http_filters:
          - name: envoy.filters.http.router
      
      # transport_socket:
      #   name: envoy.transport_sockets.tls
      #   typed_config:
      #     "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
      #     common_tls_context:
      #       alpn_protocols:
      #       - "h2"       
      #       tls_certificates:             
      #         certificate_chain:
      #           filename: "/etc/envoy/certs/server.crt"
      #         private_key:
      #           filename: "/etc/envoy/certs/server.key"
  clusters:
  # simapleapp
  - name: simpleapp
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: simpleapp
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: simaple-app
                port_value: 80

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9091 }
